Replace `.collect(Collectors.toList())` with `.toList()` in InMemoryBookRepository
For just fetching lists, it is better to make them unmodifiable.